# chatalot

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  MISSION.md  README.md  docker-compose.yml
.github/workflows/: aur.yml  desktop.yml  docker.yml
clients/desktop/src-tauri/: Cargo.toml  desktop-template.desktop  tauri.conf.json
clients/desktop/src-tauri/capabilities/: default.json
clients/desktop/src-tauri/src/: keystore.rs  main.rs
clients/web/: package-lock.json  package.json  svelte.config.js  vite.config.ts
crates/chatalot-common/: Cargo.toml
crates/chatalot-crypto/: Cargo.toml
crates/chatalot-crypto-wasm/: Cargo.toml
crates/chatalot-crypto-wasm/src/: lib.rs
crates/chatalot-crypto/src/: aead.rs  double_ratchet.rs  identity.rs  lib.rs  sender_keys.rs  types.rs  x3dh.rs
crates/chatalot-db/: Cargo.toml
crates/chatalot-db/src/: lib.rs  pool.rs
crates/chatalot-db/src/models/: announcement.rs  audit_log.rs  blocked_hash.rs  bookmark.rs  channel.rs  community.rs  custom_emoji.rs  file.rs  group.rs  key_bundle.rs  message.rs  mod.rs  pin.rs  poll.rs  push_subscription.rs  reaction.rs  registration_invite.rs  report.rs  scheduled_message.rs  sender_key.rs  timeout.rs  user.rs  user_block.rs  user_preferences.rs  voice.rs  warning.rs  webhook.rs
crates/chatalot-db/src/repos/: announcement_repo.rs  audit_repo.rs  block_repo.rs  blocked_hash_repo.rs  bookmark_repo.rs  channel_repo.rs  community_repo.rs  custom_emoji_repo.rs  dm_repo.rs  file_repo.rs  group_repo.rs  invite_repo.rs  key_repo.rs  message_repo.rs  mod.rs  pin_repo.rs  poll_repo.rs  preferences_repo.rs  push_subscription_repo.rs  reaction_repo.rs  registration_invite_repo.rs  report_repo.rs  scheduled_message_repo.rs  sender_key_repo.rs  settings_repo.rs  timeout_repo.rs  unread_repo.rs  user_repo.rs  voice_repo.rs  warning_repo.rs  webhook_repo.rs
crates/chatalot-server/: Cargo.toml
crates/chatalot-server/src/: app_state.rs  config.rs  error.rs  main.rs  permissions.rs
crates/chatalot-server/src/middleware/: auth.rs  community_gate.rs  mod.rs  rate_limit.rs  security.rs
crates/chatalot-server/src/routes/: account.rs  admin.rs  announcements.rs  auth.rs  bookmarks.rs  channels.rs  communities.rs  dms.rs  feedback.rs  files.rs  gifs.rs  groups.rs  health.rs  keys.rs  legal.rs  link_preview.rs  messages.rs  mod.rs  polls.rs  push.rs  scheduled.rs  sender_keys.rs  totp.rs  users.rs  webhooks.rs
crates/chatalot-server/src/services/: auth_service.rs  css_sanitizer.rs  file_security.rs  mod.rs  push_service.rs  thumbnail_service.rs
crates/chatalot-server/src/ws/: connection_manager.rs  handler.rs  mod.rs  session.rs
docs/: README.md  architecture.md  deployment.md  development.md  encryption.md  features.md
docs/admin-guide/: README.md  admin-dashboard.md  announcements.md  audit-log.md  community-oversight.md  file-management.md  invite-system.md  registration-settings.md  reports-and-moderation.md  role-hierarchy.md  security-settings.md  user-management.md
docs/appendix/: README.md  changelog.md  faq.md  feature-status.md  glossary.md  keyboard-shortcuts.md
docs/desktop-app/: README.md  features.md  installation.md  troubleshooting.md
docs/developer-guide/: README.md  api-reference.md  architecture.md  authentication.md  building-from-source.md  contributing.md  crypto-implementation.md  database-schema.md  project-structure.md  testing.md  websocket-protocol.md
docs/encryption/: README.md  dm-encryption.md  group-encryption.md  how-it-works.md  key-management.md  limitations.md  overview.md  technical-details.md  verification.md
docs/getting-started/: README.md  creating-an-account.md  joining-a-voice-call.md  navigating-the-interface.md  sending-your-first-message.md  setting-up-your-profile.md  what-is-chatalot.md
docs/moderation-guide/: README.md  content-moderation.md  kicks-and-bans.md  moderation-overview.md  permissions-reference.md  reports.md  timeouts.md  warnings.md
docs/self-hosting/: README.md  backup-and-restore.md  cloudflare-tunnel.md  configuration.md  database-setup.md  docker-deployment.md  (+8 more)
migrations/: 001_users.sql  002_identity_keys.sql  003_refresh_tokens.sql  004_audit_log.sql  005_prekeys.sql  006_channels.sql  007_messages.sql  008_files.sql  009_dm_pairs.sql  010_voice_sessions.sql  011_reactions.sql  012_unread_tracking.sql  013_channel_bans.sql  014_groups.sql  015_group_invites.sql  016_account_deletion_fks.sql  017_admin_role.sql  018_registration_invites.sql  019_communities.sql  020_user_preferences.sql  021_pinned_messages.sql  022_sender_key_distributions.sql  023_instance_owner.sql  024_permissions_enhancements.sql  025_performance_indexes.sql  026_security_suite.sql  027_lockout_and_quota.sql  028_blocking_and_reports.sql  029_new_features.sql  030_discoverable.sql  031_group_discoverable.sql  032_personal_groups.sql  033_channel_archiving.sql  034_customization.sql  035_more_indexes.sql  036_community_members_index.sql  037_recovery_codes.sql  038_message_edits.sql  039_threads.sql  040_read_cursors_user_index.sql  (+11 more)
scripts/: backup.sh  build-wasm.sh  deploy.env.example  deploy.sh  generate-keys.sh  generate-secrets.sh  install-desktop.sh  install.sh
(+155 files in other folders)
