[package]
name = "chatalot-crypto-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
chatalot-crypto = { path = "../chatalot-crypto" }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
ed25519-dalek = { version = "2", features = ["serde", "pem", "rand_core"] }
x25519-dalek = { version = "2", features = ["static_secrets", "serde"] }
rand = "0.8"
# Enables OsRng in WASM via crypto.getRandomValues()
getrandom = { version = "0.2", features = ["js"] }

[profile.release]
opt-level = "s"
lto = true
