[package]
name = "chatalot-server"
version.workspace = true
edition.workspace = true

[dependencies]
chatalot-db = { workspace = true }
chatalot-crypto = { workspace = true }
chatalot-common = { workspace = true }

axum = { workspace = true }
axum-extra = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
argon2 = { workspace = true }
jsonwebtoken = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
subtle = { workspace = true }
zeroize = { workspace = true }
dashmap = { workspace = true }
validator = { workspace = true }
hex = "0.4"
futures-util = "0.3"
totp-rs = { workspace = true }
data-encoding = { workspace = true }
tokio-util = { version = "0.7", features = ["io"] }
multer = "3"
reqwest = { workspace = true }
regex = "1"
url = "2"
html-escape = "0.2"
